# application/inbound-controller-rest/src/main/java/com/hotel/management/mapper/HotelMapper.java
@@ -260,6 +260,12 @@ public class HotelMapper {
         return response;
     }
 
+    public List<RoomTypeResponse> toRoomTypeResponse(List<RoomTypeResult> results) {
+        return results.stream()
+                .map(this::toResponse)
+                .toList();
+    }
+
     public RoomResponse toResponse(RoomResult result) {
         return new RoomResponse()
                 .roomId(result.roomId())
